--- a/MyLibrary/src/main/webapp/WEB-INF/web.xml
+++ b/MyLibrary/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
   </welcome-file-list>
   <servlet>
   <servlet-name>dispatcher</servlet-name>
-  <servlet-class>controller.DispatcherServlet</servlet-class>
+  <servlet-class>controller.all.DispatcherServlet</servlet-class>
   </servlet>
   <servlet-mapping>
   <servlet-name>dispatcher</servlet-name>
