--- a/OpenBank/src/main/webapp/WEB-INF/web.xml
+++ b/OpenBank/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,11 @@
   <display-name>OpenBank</display-name>
    <servlet>
     <servlet-name>dispatcherServlet</servlet-name>
-    <servlet-class>kr.ac.kopo.controller.DispatcherServlet</servlet-class>
+    <servlet-class>joybank.controller.DispatcherServlet</servlet-class>
      <init-param>
             <param-name>propLoc</param-name>
         <!--xml만 고치면 됨 -->
-            <param-value>C:\Users\User\eclipse-workspaceJSP\OpenBank\src\bean.properties</param-value>
+            <param-value>C:\\Users\\User\\eclipse-workspaceJSP\\OpenBank\\bean.properties</param-value>
         </init-param>
   </servlet>
   <servlet-mapping>
