230629_계좌개설(뷰까지는 생성)

--- a/OpenBank/bean.properties
+++ b/OpenBank/bean.properties
@@ -1,5 +1,6 @@
-/login.do=joybank.user.LoginformController
+/login.do=joybank.controller.user.LoginformController
 /main.do=joybank.controller.MainController
-/loginprocess.do=joybank.user.LoginProcessController
-/logout.do=joybank.user.LogoutController
-/insertuser.do=joybank.user.InsertUserController
+/loginprocess.do=joybank.controller.user.LoginProcessController
+/logout.do=joybank.controller.user.LogoutController
+/insertuser.do=joybank.controller.user.InsertUserController
+/createaccont.do=joybank.controller.CreateAccountController
