230629_계좌개설 성공_상품만들것

--- a/OpenBank/bean.properties
+++ b/OpenBank/bean.properties
@@ -3,4 +3,5 @@
 /loginprocess.do=joybank.controller.user.LoginProcessController
 /logout.do=joybank.controller.user.LogoutController
 /insertuser.do=joybank.controller.user.InsertUserController
-/createaccont.do=joybank.controller.CreateAccountController
+/createaccount.do=joybank.controller.account.CreateAccountController
+/joinuser.do=joybank.controller.user.JoinuserController
