230630_홈페이지 수정, 상품 vo~controller

--- a/OpenBank/bean.properties
+++ b/OpenBank/bean.properties
@@ -5,3 +5,4 @@
 /insertuser.do=joybank.controller.user.InsertUserController
 /createaccount.do=joybank.controller.account.CreateAccountController
 /joinuser.do=joybank.controller.user.JoinuserController
+/addProduct.do=joybank.controller.product.AddProductController
