230701_상품등록 성공/servlet과 json오류 수정성공(쥬!)

--- a/OpenBank/bean.properties
+++ b/OpenBank/bean.properties
@@ -6,3 +6,7 @@
 /createaccount.do=joybank.controller.account.CreateAccountController
 /joinuser.do=joybank.controller.user.JoinuserController
 /addProduct.do=joybank.controller.product.AddProductController
+/getAllProducts.do=joybank.controller.product.GetProductListController
+/adminpage.do=joybank.controller.user.AdminpagerController
+/editProduct.do=joybank.controller.product.EditProductController
+/deleteProduct.do=joybank.controller.product.DeleteProductController
