230702_휴면계좌해지랑 추가하는 것 재확인

--- a/OpenBank/bean.properties
+++ b/OpenBank/bean.properties
@@ -5,8 +5,9 @@
 /insertuser.do=joybank.controller.user.InsertUserController
 /createaccount.do=joybank.controller.account.CreateAccountController
 /joinuser.do=joybank.controller.user.JoinuserController
-/addProduct.do=joybank.controller.product.AddProductController
 /getAllProducts.do=joybank.controller.product.GetProductListController
 /adminpage.do=joybank.controller.user.AdminpagerController
-/editProduct.do=joybank.controller.product.EditProductController
-/deleteProduct.do=joybank.controller.product.DeleteProductController
+/accList.do=joybank.controller.account.AccountListController
+/addProduct.do=joybank.controller.product.AddProductController
+/accStatUpdate.do=joybank.controller.account.AccountStatusUpdateController
+/checkdormantacc.do=joybank.controller.account.CheckDormantController
